basic survey interaction

--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -103,7 +103,7 @@
     margin: layout.$base-spacing 0;
   }
 
-  .primary {
+  .primary-gradient {
     display: block;
     margin: (layout.$base-spacing * 2) auto 0;
   }
