--- a/client/src/ui/organisms/survey/index.scss
+++ b/client/src/ui/organisms/survey/index.scss
@@ -32,6 +32,7 @@
 
   [type="text"] {
     margin: layout.$base-spacing 0;
+    max-width: 480px;
     width: 100%;
   }
 
@@ -42,5 +43,10 @@
 
   textarea {
     margin-bottom: layout.$base-spacing;
+  }
+
+  .survey-success {
+    font-size: typography.$xl-font-size;
+    text-align: center;
   }
 }
