--- a/kumascript/macros/LearnSidebar.ejs
+++ b/kumascript/macros/LearnSidebar.ejs
@@ -828,26 +828,26 @@ var text = mdn.localStringMap({
         'How_CSS_works': 'Как работает CSS',
         'Using_your_new_knowledge': 'Использование ваших новых знаний',
       'CSS_building_blocks': 'CSS building blocks',
-        'CSS_building_blocks_overview': 'CSS building blocks overview',
-        'Cascade_and_inheritance': 'Cascade and inheritance',
-        'CSS_selectors': 'CSS selectors',
-        'The_box_model': 'The box model',
-        'Backgrounds_and_borders': 'Backgrounds and borders',
-        'Handling_different_text_directions': 'Handling different text directions',
-        'Overflowing_content': 'Overflowing content',
-        'Values_and_units': 'Values and units',
-        'Sizing_items_in_CSS': 'Sizing items in CSS',
-        'Images_media_and_form_elements': 'Images, media, and form elements',
-        'Styling_tables': 'Styling tables',
-        'Debugging_CSS': 'Debugging CSS',
-        'Organizing_your_CSS': 'Organizing your CSS',
-      'Styling_text': 'Стилизирование текста',
-        'Styling_text_overview': 'Стилизирование текста',
-        'Fundamental_text_and_font_styling': 'Основы стилизирования текста и шрифта',
-        'Styling_lists': 'Стилизирование списков',
-        'Styling_links': 'Стилизирование ссылок',
+        'CSS_building_blocks_overview': 'Устройство CSS',
+        'Cascade_and_inheritance': 'Каскад и наследование',
+        'CSS_selectors': 'Селекторы CSS',
+        'The_box_model': 'Блочная модель',
+        'Backgrounds_and_borders': 'Фон и границы',
+        'Handling_different_text_directions': 'Изменение направления текста',
+        'Overflowing_content': 'Перекрытие содержимого',
+        'Values_and_units': 'Значения свойств CSS',
+        'Sizing_items_in_CSS': 'Изменение размеров в CSS',
+        'Images_media_and_form_elements': 'Элементы изображений, медиа и форм',
+        'Styling_tables': 'Стилизация таблиц',
+        'Debugging_CSS': 'Отладка CSS',
+        'Organizing_your_CSS': 'Организация CSS-кода',
+      'Styling_text': 'Стилизация текста',
+        'Styling_text_overview': 'Стилизация текста',
+        'Fundamental_text_and_font_styling': 'Основы стилизации текста и шрифта',
+        'Styling_lists': 'Стилизация списков',
+        'Styling_links': 'Стилизация ссылок',
         'Web_fonts': 'Веб-шрифты',
-        'Assessment_typesetting_a_community_school_homepage': 'Задание: Стилизирование школьного сайта',
+        'Assessment_typesetting_a_community_school_homepage': 'Задание: Стилизация школьного сайта',
       'CSS_layout': 'CSS макет',
         'CSS_layout_overview': 'CSS макет',
         'Normal_Flow': 'Normal Flow',
