--- a/kumascript/macros/LearnSidebar.ejs
+++ b/kumascript/macros/LearnSidebar.ejs
@@ -850,34 +850,34 @@ var text = mdn.localStringMap({
         'Assessment_typesetting_a_community_school_homepage': 'Задание: Стилизация школьного сайта',
       'CSS_layout': 'CSS макет',
         'CSS_layout_overview': 'CSS макет',
-        'Normal_Flow': 'Normal Flow',
+        'Normal_Flow': 'Базовый поток',
         'Flexbox': 'Flexbox',
         'Grids' : 'Сетки',
         'Floats': 'Float',
         'Positioning': 'Позиционирование',
-        'Multiple-column_Layout': 'Multiple-column Layout',
-        'Responsive_design': 'Responsive design',
+        'Multiple-column_Layout': 'Макет с несколькими столбцами',
+        'Responsive_design': 'Отзывчивый дизайн',
         'Media_queries': 'Beginner\'s guide to media queries',
         'Legacy_Layout_Methods': 'Legacy Layout Methods',
         'Supporting_Older_Browsers': 'Supporting Older Browsers',
-        'Fundamental_Layout_Comprehension': 'Fundamental Layout Comprehension',
+        'Fundamental_Layout_Comprehension': 'Фундаментальное понимание раскладки',
     'JavaScript_dynamic_client-side_scripting': 'JavaScript — динамический клиентский скриптинг',
       'JavaScript_first_steps': 'Первые шаги в JavaScript',
         'JavaScript_first_steps_overview': 'Первые шаги в JavaScript',
         'What_is_JavaScript': 'Что такое JavaScript?',
         'A_first_splash_into_JavaScript': 'Первое погружение в JavaScript',
         'What_went_wrong': 'Что-то пошло не так? Устранение ошибок JavaScript',
-        'Storing_the_information_you_need': 'Хранение нужной информации — Переменные',
-        'Basic_math_in_JavaScript': 'Основы JavaScript — Числа и операторы',
+        'Storing_the_information_you_need': 'Переменные — место хранения необходимой информации',
+        'Basic_math_in_JavaScript': 'Базовая математика в JavaScript — числа и операторы',
         'Handling_text': 'Работа с текстом — Строки в JavaScript',
         'Useful_string_methods': 'Полезные методы для строк',
         'Arrays': 'Массивы',
         'Assessment_silly_story_generator': 'Задание: Генератор глупых историй',
       'JavaScript_building_blocks': 'Блоки в JavaScript',
-        'JavaScript_building_blocks_overview': 'Блоки в JavaScript',
-        'Making_decisions_in_your_code': 'Делаем решения в вашем годе — Условия',
-        'Looping_code': 'Повторение кода',
-        'Functions': 'Функции — Переиспользуемые блоки кода',
+        'JavaScript_building_blocks_overview': 'Структурные элементы JavaScript',
+        'Making_decisions_in_your_code': 'Принятие решений в вашем коде — условные конструкции',
+        'Looping_code': 'Зацикливание кода',
+        'Functions': 'Функции — переиспользуемые блоки кода',
         'Build_your_own_function': 'Создаём свою функцию',
         'Function_return_values': 'Возвращаемые значения функций',
         'Introduction_to_events': 'Введение в события',
