--- a/client/src/ui/organisms/product-features/index.scss
+++ b/client/src/ui/organisms/product-features/index.scss
@@ -22,16 +22,18 @@
         center no-repeat;
       content: "";
       display: block;
-      height: 464px;
+      height: 374px;
       margin: 0 auto;
       position: relative;
       top: -40px;
-      width: 417px;
+      width: 337px;
 
       @media #{layout.$mq-small-desktop-and-up} {
+        height: 464px;
         left: 0;
         position: absolute;
         top: -140px;
+        width: 417px;
       }
     }
   }
@@ -68,6 +70,12 @@
       gap: layout.$base-spacing;
       justify-content: space-between;
       padding: (layout.$base-spacing * 4) layout.$base-spacing;
+    }
+
+    li {
+      @media #{layout.$mq-small-desktop-and-up} {
+        flex: 0 1 30%;
+      }
     }
   }
 
