--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
@@ -54,6 +54,7 @@
 
   .bc-table-row-header {
     padding: math.div($base-spacing, 2) math.div($base-spacing, 4);
+    display: flex;
 
     code {
       text-decoration: none;
