--- a/client/src/ui/molecules/card/index.scss
+++ b/client/src/ui/molecules/card/index.scss
@@ -1,62 +1,61 @@
 @use "sass:math";
 
-@import "~@mdn/minimalist/sass/vars/layout";
-@import "~@mdn/minimalist/sass/vars/typography";
+@use "~@mdn/minimalist/sass/vars/layout";
+@use "~@mdn/minimalist/sass/vars/typography";
 
-@import "../../theme/borders-shadows/index";
-@import "../../theme/color-palette/index";
+@use "../../theme/index" as theme;
 
 .card {
-  background-color: $white;
-  border-radius: $default-border-radius;
-  box-shadow: $card-box-shadow;
-  margin: 0 auto ($base-spacing * 2);
+  background-color: theme.$white;
+  border-radius: theme.$default-border-radius;
+  box-shadow: theme.$card-box-shadow;
+  margin: 0 auto (layout.$base-spacing * 2);
   max-width: 95%;
-  padding: $base-spacing;
+  padding: layout.$base-spacing;
 
-  @media #{$mq-tablet-and-up} {
+  @media #{layout.$mq-tablet-and-up} {
     max-width: 320px;
   }
 
   &.featured {
-    border-top: 18px solid $mdn-pink600;
+    border-top: 18px solid theme.$mdn-pink600;
   }
 
   .card-type-heading {
-    color: $mdn-pink600;
+    color: theme.$mdn-pink600;
     font-weight: bold;
-    margin-bottom: math.div($base-spacing, 2);
+    margin-bottom: math.div(layout.$base-spacing, 2);
   }
 
   h2 {
-    font-size: $medium-font-size;
-    line-height: $heading-line-height;
-    margin: math.div($base-spacing, 2) 0;
+    font-size: typography.$medium-font-size;
+    line-height: typography.$heading-line-height;
+    margin: math.div(layout.$base-spacing, 2) 0;
 
-    @media #{$mq-small-desktop-and-up} {
+    @media #{layout.$mq-small-desktop-and-up} {
       margin-top: 0;
     }
 
-    @media #{$mq-large-desktop-and-up} {
-      font-size: $large-font-size;
+    @media #{layout.$mq-large-desktop-and-up} {
+      font-size: typography.$large-font-size;
     }
   }
 
   h3 {
-    font-size: $small-medium-font-size;
+    font-size: typography.$small-medium-font-size;
     font-weight: bold;
-    margin-bottom: math.div($base-spacing, 2);
+    margin-bottom: math.div(layout.$base-spacing, 2);
   }
 
   .author {
-    border-bottom: $standard-light-border;
-    margin: math.div($base-spacing, 2) 0;
-    padding-bottom: math.div($base-spacing, 2);
+    border-bottom: theme.$standard-light-border;
+    margin: math.div(layout.$base-spacing, 2) 0;
+    padding-bottom: math.div(layout.$base-spacing, 2);
   }
 
   ul,
   li {
-    font-size: $small-font-size;
+    font-size: typography.$small-font-size;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -64,7 +63,7 @@
 }
 
 .deep-dive-card {
-  @media #{$mq-small-desktop-and-up} {
+  @media #{layout.$mq-small-desktop-and-up} {
     position: sticky;
   }
 }
