Update interface list on {{WebRTCSidebar}}

--- a/kumascript/macros/WebRTCSidebar.ejs
+++ b/kumascript/macros/WebRTCSidebar.ejs
@@ -91,11 +91,10 @@ var text = mdn.localStringMap({
         <li><%-await template("domxref", ["MessageEvent"])%></li>
         <li><%-await template("domxref", ["MediaStream"])%></li>
         <li><%-await template("domxref", ["RTCStatsReport"])%></li>
-        <li><%-await template("domxref", ["RTCIdentityEvent"])%></li>
-        <li><%-await template("domxref", ["RTCIdentityErrorEvent"])%></li>
         <li><%-await template("domxref", ["MediaStreamEvent"])%></li>
         <li><%-await template("domxref", ["MediaStreamTrack"])%></li>
         <li><%-await template("domxref", ["MediaDevices"])%></li>
+        <li><%-await template("domxref", ["RTCDataChannel"])%></li>
       </ol>
     </details>
   </li>
