--- a/client/src/plus/deep-dives/homepage/index.scss
+++ b/client/src/plus/deep-dives/homepage/index.scss
@@ -3,7 +3,7 @@
 @use "~@mdn/minimalist/sass/vars/layout";
 @use "~@mdn/minimalist/sass/vars/typography";
 
-@use "../ui/theme/index" as theme;
+@use "../../../ui/theme/index" as theme;
 
 .page-content-container.deep-dives {
   margin: layout.$base-spacing 0;
