--- a/client/src/plus/deep-dives/index.scss
+++ b/client/src/plus/deep-dives/index.scss
@@ -2,7 +2,7 @@
 @use "~@mdn/minimalist/sass/vars/layout";
 @use "~@mdn/minimalist/sass/vars/typography";
 
-@use "../ui/theme/index" as theme;
+@use "../../ui/theme/index" as theme;
 
 .page-content-container.deep-dives {
   background-color: theme.$mdn-neutral050;
