--- a/client/src/plus/deep-dives/byline/index.scss
+++ b/client/src/plus/deep-dives/byline/index.scss
@@ -2,7 +2,7 @@
 @use "~@mdn/minimalist/sass/vars/layout";
 @use "~@mdn/minimalist/sass/vars/typography";
 
-@use "../../theme/index" as theme;
+@use "../../../ui/theme/index" as theme;
 
 .byline {
   @media #{layout.$mq-small-desktop-and-up} {
