--- a/client/src/plus/deep-dives/series-card/index.scss
+++ b/client/src/plus/deep-dives/series-card/index.scss
@@ -3,7 +3,7 @@
 @use "~@mdn/minimalist/sass/vars/layout";
 @use "~@mdn/minimalist/sass/vars/typography";
 
-@use "../../theme/index" as theme;
+@use "../../../ui/theme/index" as theme;
 
 .series-card {
   display: none;
@@ -45,8 +45,7 @@
         margin-bottom: math.div(layout.$base-spacing, 2);
 
         &::before {
-          background: transparent url("../../atoms/svg/default.svg") center
-            center no-repeat;
+          background: transparent url("./default.svg") center center no-repeat;
           background-size: 12px;
           content: "";
           display: inline-block;
@@ -59,7 +58,7 @@
           font-weight: bold;
 
           &::before {
-            background-image: url("../../atoms/svg/active.svg");
+            background-image: url("./active.svg");
           }
         }
 
@@ -67,7 +66,7 @@
           color: theme.$mdn-neutral500;
 
           &::before {
-            background-image: url("../../atoms/svg/unavailable.svg");
+            background-image: url("./unavailable.svg");
           }
         }
       }
