--- a/client/src/ui/organisms/hero/index.scss
+++ b/client/src/ui/organisms/hero/index.scss
@@ -77,8 +77,8 @@
     }
 
     p {
-      @include theme.readable-line-length();
       font-size: typography.$small-medium-font-size;
+      max-width: 620px;
     }
   }
 }
