--- a/client/src/ui/theme/index.scss
+++ b/client/src/ui/theme/index.scss
@@ -2,5 +2,6 @@
 @import "./buttons/index";
 @import "./color-palette/index";
 @import "./typography/index";
+@import "./links/index";
 @import "./code-examples/index";
 @import "./utils/index";
