--- a/client/src/ui/theme/typography/fonts.scss
+++ b/client/src/ui/theme/typography/fonts.scss
@@ -2,7 +2,7 @@
   font-display: swap;
   font-family: "Metropolis";
   font-style: normal;
-  font-weight: normal;
+  font-weight: 600;
   src: url("../../../assets/fonts/Metropolis-Bold.woff2") format("woff2"),
     url("../../../assets/fonts/Metropolis-Bold.woff") format("woff");
 }
