--- a/client/src/ui/theme/buttons/index.scss
+++ b/client/src/ui/theme/buttons/index.scss
@@ -39,3 +39,11 @@ button,
     background: palette.$mdn-blue700;
   }
 }
+
+/* prevent new font families from affecting
+ * the main menu font family
+ */
+button.top-level-entry {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
