--- a/client/src/ui/organisms/hero/index.scss
+++ b/client/src/ui/organisms/hero/index.scss
@@ -9,22 +9,26 @@
   background-color: theme.$mdn-ink900;
   color: theme.$text-color-inverted;
   overflow: hidden;
-  padding: (layout.$base-spacing * 2.5) 0;
+  padding: layout.$base-spacing 0;
+
+  @media #{layout.$mq-small-desktop-and-up} {
+    padding: (layout.$base-spacing * 2.5) 0;
+  }
 
   .header-wrapper {
     height: 100%;
     margin: auto;
     max-width: layout.$max-width-default;
-    padding: (layout.$base-spacing * 2) math.div(layout.$base-spacing, 2);
+    padding: (layout.$base-spacing * 2) layout.$base-spacing;
     position: relative;
     z-index: layout.$bottom-layer;
 
-    @media #{layout.$mq-tablet-and-up} {
+    @media #{layout.$mq-small-desktop-and-up} {
       display: grid;
       gap: 0 math.div(layout.$base-spacing, 2);
       gap: 0 (layout.$base-spacing * 2.5);
       grid-template-columns: 1fr 0;
-      padding: (layout.$base-spacing * 2) layout.$base-spacing;
+      padding: (layout.$base-spacing * 2) (layout.$base-spacing * 5);
     }
 
     &::after {
@@ -57,6 +61,7 @@
       margin-inline-start: 0;
 
       @media #{layout.$mq-small-desktop-and-up} {
+        font-size: theme.$marketing-hero-h1-font-size;
         margin: layout.$base-spacing 0;
       }
     }
@@ -66,6 +71,10 @@
       background-clip: text;
       font-size: typography.$medium-font-size;
       margin-top: 0;
+
+      @media #{layout.$mq-small-desktop-and-up} {
+        font-size: theme.$marketing-hero-h2-font-size;
+      }
     }
 
     a {
@@ -77,8 +86,13 @@
     }
 
     p {
-      font-size: typography.$small-medium-font-size;
+      font-size: typography.$default-font-size;
+      margin-bottom: 0;
       max-width: 620px;
+
+      @media #{layout.$mq-small-desktop-and-up} {
+        font-size: typography.$small-medium-font-size;
+      }
     }
   }
 }
