--- a/client/src/ui/theme/typography/index.scss
+++ b/client/src/ui/theme/typography/index.scss
@@ -9,6 +9,10 @@ $code-inline-font-family: consolas, "Liberation Mono", courier, monospace;
 
 $small-font-size: 0.9rem; /* 16px */
 
+$marketing-hero-h1-font-size: 4rem; /* 64px */
+$marketing-feature-h1-font-size: 3rem; /* 48px */
+$marketing-hero-h2-font-size: 2rem; /* 32px */
+
 h1,
 h2,
 h3,
