--- a/client/src/ui/theme/buttons/index.scss
+++ b/client/src/ui/theme/buttons/index.scss
@@ -13,6 +13,7 @@ button,
   font-family: typography.$metropolis-font-family;
   font-size: typography.$small-font-size;
   font-weight: normal;
+  min-height: inherit;
   padding: math.div(layout.$base-spacing, 4) math.div(layout.$base-spacing, 1.5);
   text-align: center;
   text-decoration: none;
