--- a/kumascript/macros/JSRef.ejs
+++ b/kumascript/macros/JSRef.ejs
@@ -10,7 +10,7 @@
 //  $2 - Related objects to display (comma separated) – OBSOLETE
 
 // Strings
-var commonl10n = web.getJSONData('L10n-Common'));
+var commonl10n = web.getJSONData('L10n-Common');
 var jsl10n = web.getJSONData('L10n-JavaScript');
 
 var text = {
